--- a/LocadoraDeveiculos.WebApi/Properties/launchSettings.json
+++ b/LocadoraDeveiculos.WebApi/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "LocadoraDeVeiculos.WebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
