--- a/client/angular.json
+++ b/client/angular.json
@@ -74,7 +74,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -116,5 +122,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "0ea89531-d30e-4159-9601-785296a5211e"
   }
 }
