--- a/.github/workflows/master_locadoraveiculo.yml
+++ b/.github/workflows/master_locadoraveiculo.yml
@@ -26,10 +26,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build ./server/web-api --configuration Release
+        run: dotnet build ./server --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./server/web-api -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish ./server -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -64,5 +64,3 @@ jobs:
           app-name: 'LocadoraVeiculo'
           slot-name: 'Production'
           package: .
-
-          
